Website aangepast en svg weg

--- a/BakkerEi.html
+++ b/BakkerEi.html
@@ -8,7 +8,9 @@
 </head>
 
 <body>
-    <h1>De beste lekkernei haal je bij Bakker-Ei</h1>
-    <h2>KAN IK SAVEN???</h2>
+    <header>
+        <img src="reschouscres/logo.svg" height="200px" width="200px">
+    </header>
 
+    <h1>De beste lekkernei haal je bij Bakker-Ei</h1>
 </body>
