LOGO DOET HET!!!

--- a/BakkerEi.html
+++ b/BakkerEi.html
@@ -9,7 +9,7 @@
 
 <body>
     <header>
-        <img src="reschouscres/logo.svg" height="200px" width="200px">
+        <img src="reschouscres/logo.png" height="200px" width="200px">
     </header>
 
     <h1>De beste lekkernei haal je bij Bakker-Ei</h1>
