--- a/BakkerEi.html
+++ b/BakkerEi.html
@@ -1,16 +1,24 @@
 <!DOCTYPE html>
+<html lang="nl">
 
-<link rel="stylesheet" href="style.css">
 
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bakker-Ei!</title>
-    
+    <link rel="stylesheet" href="style.css">
 </head>
-
 <body>
     <header>
-        <img src="reschouscres/logo.png" height="200px" width="200px">
+        <img src="reschouscres/logo.png" alt="Logo" class="logo">
+        <div id="navbar">
+            <div class="knop" id="producten"> <h2>Producten</h2> </div>
+            <div class="knop" id="verhaal"> <h2>verhaal</h2> </div>
+            <div class="knop" id="contact"> <h2>contact</h2> </div>
+        </div>
     </header>
-
     <h1>De beste lekkernei haal je bij Bakker-Ei</h1>
+    <script>
+    </script>
 </body>
+</html>
