--- a/BakkerEi.html
+++ b/BakkerEi.html
@@ -8,15 +8,20 @@
 </head>
 <body>
     <header>
-        <img src="reschouscres/logo.png" alt="Logo" class="logo">
-        <div id="navbar">
-            <div class="knop" id="producten"> <h2>Producten</h2> </div>
-            <div class="knop" id="verhaal"> <h2>verhaal</h2> </div>
-            <div class="knop" id="contact"> <h2>contact</h2> </div>
-        </div>
+        <img src="reschouscres/logo.png" class="logo" width="150px">
+        <div class="knop" id="producten"> <h2>Producten</h2> </div>
+        <div class="knop" id="verhaal"> <h2>verhaal</h2> </div>
+        <div class="knop" id="contact"> <h2>contact</h2> </div>
     </header>
     <h1>De beste lekkernei haal je bij Bakker-Ei</h1>
     <script>
     </script>
 </body>
+<footer>
+    <img src="reschouscres/logo.png" class="logo" width="50px">
+    <div>email</div>
+    <div>contact</div>
+    <div>youtube</div>
+</footer>
+
 </html>
