--- a/BakkerEi/Home.html
+++ b/BakkerEi/Home.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <img src="reschouscres/logo.png" class="logo" width="150px">
-        <div class="knop" id="producten"> <h2>Producten</h2> </div>
+        <div class="knop" id="producten"><a href="Producten.html"><h2>Producten</h2></a> </div>
         <div class="knop" id="verhaal"> <h2>Over ons</h2> </div>
         <div class="knop" id="contact"> <h2>Contact</h2> </div>
     </header>
