--- a/BakkerEi/Home.html
+++ b/BakkerEi/Home.html
@@ -1,22 +1,27 @@
 <!DOCTYPE html>
 <html lang="nl">
 <head>
+    <link rel="stylesheet" href="https://use.typekit.net/ugf7egy.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bakker-Ei!</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
+<header>
+    <img src="reschouscres/logo.png" class="logo" width="150px">
+    <div class="knop" id="producten"><a href="Producten.html"><h2>Producten</h2></a> </div>
+    <div class="knop" id="verhaal"> <h2>Over ons</h2> </div>
+    <div class="knop" id="contact"> <h2>Contact</h2> </div>
+</header>
+
 <body>
-    <header>
-        <img src="reschouscres/logo.png" class="logo" width="150px">
-        <div class="knop" id="producten"><a href="Producten.html"><h2>Producten</h2></a> </div>
-        <div class="knop" id="verhaal"> <h2>Over ons</h2> </div>
-        <div class="knop" id="contact"> <h2>Contact</h2> </div>
-    </header>
     <h1>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam pharetra tristique leo, eget porta erat hendrerit sed. Vivamus aliquam sem mauris, ac ullamcorper justo condimentum eget. Phasellus gravida tempor nisi. Nunc et gravida turpis. Phasellus posuere felis metus, eu eleifend mi commodo id. Quisque facilisis elit eget consequat elementum. Cras et luctus nisi. Vestibulum congue auctor sapien, sit amet rutrum lacus scelerisque quis. Aenean hendrerit felis sit amet augue vestibulum, vel ultrices dolor finibus. Nullam lobortis, ligula quis rutrum interdum, mauris lectus faucibus metus, ut interdum sapien quam id nunc. Quisque non tellus arcu. Duis lacus nibh, hendrerit sit amet lobortis quis, malesuada quis mauris. Phasellus at facilisis erat. Phasellus sed aliquet nisl, dictum feugiat urna. Mauris et libero ultricies, tempus purus sit amet, suscipit ex. ac ullamcorper justo condimentum eget. Phasellus gravida tempor nisi. Nunc et gravida turpis. Phasellus posuere felis metus, eu eleifend mi commodo id. Quisque facilisis elit eget consequat elementum.</h1>
     <script>
     </script>
 </body>
+
+
 <footer>
     <tm id="trademark">
         <img src="reschouscres/logo.png" class="logo" width="40px">
