--- a/BakkerEi/Contact.html
+++ b/BakkerEi/Contact.html
@@ -10,7 +10,7 @@
 </head>
 
 <header>
-    <img src="reschouscres/logo.png" class="logo" width="150px">
+    <a href="Home.html"><img src="reschouscres/logo.png" class="logo" width="150px"></a>
     <a href="Producten.html" id="producten"><div class="knop"><h2>Producten</h2></div></a>
     <a href="Verhaal.html" id="verhaal"><div class="knop" id="verhaal"> <h2>Over ons</h2> </div></a>
     <a href="Contact.html" id="contact"><div class="knop" id="contact"> <h2>Contact</h2> </div></a>
