--- a/BakkerEi/Home.html
+++ b/BakkerEi/Home.html
@@ -29,7 +29,7 @@
     </tm>
     <nav id="navbar">
         <div class="knop_f">Email</div>
-        <div class="knop_f">Contact</div>
+        <div class="knop_f"><a id="contact_f" href="Contact.html">Contact</a></div>
         <div class="knop_f"><a id="link_youtube" href="https://www.youtube.com/@bakker-ei-lf8xy">Youtube</a></div>
     </nav>
 </footer>
