Melomakarona in producten toegevoegd

--- a/BakkerEi/Producten.html
+++ b/BakkerEi/Producten.html
@@ -16,7 +16,11 @@
     <a href="Contact.html" id="contact"><div class="knop" id="contact"> <h2>Contact</h2> </div></a>
 </header>
 <body>
-    <h1>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam pharetra tristique leo, eget porta erat hendrerit sed. Vivamus aliquam sem mauris, ac ullamcorper justo condimentum eget. Phasellus gravida tempor nisi. Nunc et gravida turpis. Phasellus posuere felis metus, eu eleifend mi commodo id. Quisque facilisis elit eget consequat elementum. Cras et luctus nisi. Vestibulum congue auctor sapien, sit amet rutrum lacus scelerisque quis. Aenean hendrerit felis sit amet augue vestibulum, vel ultrices dolor finibus. Nullam lobortis, ligula quis rutrum interdum, mauris lectus faucibus metus, ut interdum sapien quam id nunc. Quisque non tellus arcu. Duis lacus nibh, hendrerit sit amet lobortis quis, malesuada quis mauris. Phasellus at facilisis erat. Phasellus sed aliquet nisl, dictum feugiat urna. Mauris et libero ultricies, tempus purus sit amet, suscipit ex. ac ullamcorper justo condimentum eget. Phasellus gravida tempor nisi. Nunc et gravida turpis. Phasellus posuere felis metus, eu eleifend mi commodo id. Quisque facilisis elit eget consequat elementum.</h1>
+    <producten>
+    <titeltekst><h1>Melomakarona - Griekse Kerstkoekjes</h1>
+    <h2>Heerlijk geurende koekjes met een zachte textuur, gemaakt van olijfolie, sinaasappel en warme specerijen. Na het bakken royaal ondergedompeld in een honing-siroop en afgewerkt met een topping van fijngemalen walnoten. Perfect als zoete verwennerij bij de feestdagen of gewoon bij een kop koffie.</h2></titeltekst>
+    <melomakarona><img src="reschouscres/Melomakarona.png" alt="Melomakarona" class="product_afbeelding"></melomakarona>
+    </producten>
     <script>
     </script>
 </body>
