Over ons Gemaakt, kleine foutjes gefixt met overflow

--- a/BakkerEi/Verhaal.html
+++ b/BakkerEi/Verhaal.html
@@ -16,7 +16,16 @@
     <a href="Contact.html" id="contact"><div class="knop" id="contact"> <h2>Contact</h2> </div></a>
 </header>
 <body>
-    <h1>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam pharetra tristique leo, eget porta erat hendrerit sed. Vivamus aliquam sem mauris, ac ullamcorper justo condimentum eget. Phasellus gravida tempor nisi. Nunc et gravida turpis. Phasellus posuere felis metus, eu eleifend mi commodo id. Quisque facilisis elit eget consequat elementum. Cras et luctus nisi. Vestibulum congue auctor sapien, sit amet rutrum lacus scelerisque quis. Aenean hendrerit felis sit amet augue vestibulum, vel ultrices dolor finibus. Nullam lobortis, ligula quis rutrum interdum, mauris lectus faucibus metus, ut interdum sapien quam id nunc. Quisque non tellus arcu. Duis lacus nibh, hendrerit sit amet lobortis quis, malesuada quis mauris. Phasellus at facilisis erat. Phasellus sed aliquet nisl, dictum feugiat urna. Mauris et libero ultricies, tempus purus sit amet, suscipit ex. ac ullamcorper justo condimentum eget. Phasellus gravida tempor nisi. Nunc et gravida turpis. Phasellus posuere felis metus, eu eleifend mi commodo id. Quisque facilisis elit eget consequat elementum.</h1>
+    <ons_team>
+        <titeltekst><h1>Wie zijn wij?</h1>
+        <h2>Wij zijn een bakkerij die gestart is door 4 leerlingen uit het Were-di, als een schoolproject voor economie. Ons idee was om voor dat project een eigen bedrijf te starten. Na veel brainstormen zijn we op het idee gekomen om een bakkerij te maken die Griekse producten verkoopt. (aangezien een van de stichters Grieks is). Na dit schoolproject was het idee van Bakker-Ei eigenlijk geïndigd, maar toen er in 2023 een spullen mocht verkopen, hebben wij het bedrijf teruggebracht, en nu verkopen we jaarlijks bij de Were-di Kerstmarkt.</h2></titeltekst>
+        <!-- afbeelding komt nog, gebruikt melomakarona omdat daar code al voor is --><melomakarona><img src="reschouscres/Melomakarona.png"g alt="Melomakarona" class="product_afbeelding"></melomakarona>
+        </ons_team>
+        <ons_merk>
+            <!-- afbeelding komt nog, gebruikt melomakarona omdat daar code al voor is --><wij><img src="reschouscres/Tsoureki.webp"g alt="Melomakarona" class="product_afbeelding"></wij>
+            <titeltekst><h1>Ons merk</h1>
+            <h2>Het logo en de kleuren die bij Bakker-Ei gebruikt worden zit een verhaal achter. de kleuren zijn gekozen door een foto van Tsoureki te maken, en daar de kleuren van te pakken. De buitenkant van de tsoureki werdt onze hoofdkleur en de binnen kant gebruiken we als accentkleur (Zoals te zien in het logo) De naam is eigenlijk vrij simpel, Yannis had bakkerij fout geschreven om Selton boos te maken, en later besloten we om dit als onze naam te gebruiken, en daarom ook 2 eieren in het logo.</h2></titeltekst>
+        </ons_merk>
     <script>
     </script>
 </body>
