Sticky footer toegevoegd met middel van een "main" div

--- a/BakkerEi/Producten.html
+++ b/BakkerEi/Producten.html
@@ -8,35 +8,36 @@
     <link rel="stylesheet" href="style.css">
     <link rel="icon" href="./reschouscres/logo.png" type="image/x-icon">
 </head>
-
-<header>
-    <a href="Home.html"><img src="reschouscres/logo.png" class="logo" width="150px"></a>
-    <a href="Producten.html" id="producten"><div class="knop"><h2>Producten</h2></div></a>
-    <a href="Verhaal.html" id="verhaal"><div class="knop" id="verhaal"> <h2>Over ons</h2> </div></a>
-    <a href="Contact.html" id="contact"><div class="knop" id="contact"> <h2>Contact</h2> </div></a>
-</header>
-
 <body>
-    <producten>
-    <titeltekst><h1>Melomakarona - Griekse Kerstkoekjes</h1>
-    <h2>Heerlijk geurende koekjes met een zachte textuur, gemaakt van olijfolie, sinaasappel en warme specerijen. Na het bakken royaal ondergedompeld in een honing-siroop en afgewerkt met een topping van fijngemalen walnoten. Perfect als zoete verwennerij bij de feestdagen of gewoon bij een kop koffie.</h2></titeltekst>
-    <melomakarona><img src="reschouscres/Melomakarona.png" alt="Melomakarona" class="product_afbeelding"></melomakarona>
-    </producten>
-    <script>
-    </script>
+    <header>
+        <a href="Home.html"><img src="reschouscres/logo.png" class="logo" width="150px"></a>
+        <a href="Producten.html" id="producten"><div class="knop"><h2>Producten</h2></div></a>
+        <a href="Verhaal.html" id="verhaal"><div class="knop" id="verhaal"> <h2>Over ons</h2> </div></a>
+        <a href="Contact.html" id="contact"><div class="knop" id="contact"> <h2>Contact</h2> </div></a>
+    </header>
+
+    <main>
+        <producten>
+            <titeltekst>
+                <h1>Melomakarona - Griekse Kerstkoekjes</h1>
+                <h2>Heerlijk geurende koekjes met een zachte textuur, gemaakt van olijfolie, sinaasappel en warme specerijen. Na het bakken royaal ondergedompeld in een honing-siroop en afgewerkt met een topping van fijngemalen walnoten. Perfect als zoete verwennerij bij de feestdagen of gewoon bij een kop koffie.</h2>
+            </titeltekst>
+            <melomakarona>
+                <img src="reschouscres/Melomakarona.png" alt="Melomakarona" class="product_afbeelding">
+            </melomakarona>
+        </producten>
+    </main>
+
+    <footer>
+        <tm id="trademark">
+            <img src="reschouscres/logo.png" class="logo" width="40px">
+            <div>© 2024 Bakker-Ei, Inc.</div>
+        </tm>
+        <nav id="navbar">
+            <div class="knop_f">Email</div>
+            <div class="knop_f"><a id="contact_f" href="Contact.html">Contact</a></div>
+            <div class="knop_f"><a id="link_youtube" href="https://www.youtube.com/@bakker-ei-lf8xy">Youtube</a></div>
+        </nav>
+    </footer>
 </body>
-
-<footer>
-    <tm id="trademark">
-        <img src="reschouscres/logo.png" class="logo" width="40px">
-        <div>© 2024 Bakker-Ei, Inc.</div>
-    </tm>
-    <nav id="navbar">
-        <div class="knop_f">Email</div>
-        <div class="knop_f"><a id="contact_f" href="Contact.html">Contact</a></div>
-        <div class="knop_f"><a id="link_youtube" href="https://www.youtube.com/@bakker-ei-lf8xy">Youtube</a></div>
-    </nav>
-</footer>
-
 </html>
-
