Met JS een carrousel toegevoegd, pijltjes werken nog niet

--- a/BakkerEi/Home.html
+++ b/BakkerEi/Home.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bakker-Ei!</title>
     <link rel="stylesheet" href="style.css">
+    <script src="script.js" defer></script>
     <link rel="icon" href="./reschouscres/logo.png" type="image/x-icon">
 </head>
 <body>
@@ -17,7 +18,26 @@
     </header>
 
     <main>
-        <h1>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam pharetra tristique leo, zoetzure saus fj van sellen, eget porta erat hendrerit sed. Vivamus aliquam sem mauris, ac ullamcorper justo condimentum eget. Phasellus gravida tempor nisi. Nunc et gravida turpis. Phasellus posuere felis metus, eu eleifend mi commodo id. Quisque facilisis elit eget consequat elementum. Cras et luctus nisi. Vestibulum congue auctor sapien, sit amet rutrum lacus scelerisque quis. Aenean hendrerit felis sit amet augue vestibulum, vel ultrices dolor finibus. Nullam lobortis, ligula quis rutrum interdum, mauris lectus faucibus metus, ut interdum sapien quam id nunc. Quisque non tellus arcu. Duis lacus nibh, hendrerit sit amet lobortis quis, malesuada quis mauris. Phasellus at facilisis erat. Phasellus sed aliquet nisl, dictum feugiat urna. Mauris et libero ultricies, tempus purus sit amet, suscipit ex. ac ullamcorper justo condimentum eget. Phasellus gravida tempor nisi. Nunc et gravida turpis.</h1>
+        <div class="carousel">
+            <div class="carousel">
+                <div class="carousel-images">
+                  <img src="reschouscres/Carousel 1.png" alt="Afbeelding 1">
+                  <img src="reschouscres/Carousel 2.png" alt="Afbeelding 2">
+                  <img src="reschouscres/Carousel 3.png" alt="Afbeelding 3">
+                </div>
+                <!-- Pijl naar links -->
+                <button class="vorige">
+                  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24">
+                    <path d="M15.41 16.59L10.83 12l4.58-4.59L14 6l-6 6 6 6z"/>
+                  </svg>
+                </button>
+                <!-- Pijl naar rechts -->
+                <button class="volgende">
+                  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24">
+                    <path d="M9 6l6 6-6 6L10.41 16.59 15 12 10.41 7.41z"/>
+                  </svg>
+                </button>
+              </div>
     </main>
 
     <footer>
