--- a/BakkerEi/Contact.html
+++ b/BakkerEi/Contact.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bakker-Ei!</title>
     <link rel="stylesheet" href="style.css">
+    <script src="script.js" defer></script>
     <link rel="icon" href="./reschouscres/logo.png" type="image/x-icon">
 </head>
 <body>
@@ -22,8 +23,6 @@
     <h2></h2>
     <h2>Telefoonnummer: +30 225537-34</h2> 
     </contact>
-    <script>
-    </script>
 
 
 
