--- a/BakkerEi/Home.html
+++ b/BakkerEi/Home.html
@@ -21,9 +21,9 @@
         <div class="carousel">
             <div class="carousel">
                 <div class="carousel-images">
-                  <img src="reschouscres/Carousel 1.png" alt="Afbeelding 1">
+                  <img src="reschouscres/Carousel 1.jpg" alt="Afbeelding 1">
                   <img src="reschouscres/Carousel 2.png" alt="Afbeelding 2">
-                  <img src="reschouscres/Carousel 3.png" alt="Afbeelding 3">
+                  <img src="reschouscres/Carousel 3.jpg" alt="Afbeelding 3">
                 </div>
                 <!-- Pijl naar links -->
                 <button class="vorige">
