--- a/BakkerEi/Contact.html
+++ b/BakkerEi/Contact.html
@@ -18,7 +18,7 @@
 </header>
 
     <contact>
-    <h1>Wilt U contact opnemen?</h1><!-- Bestaat niet -->
+    <h1>Wilt u contact opnemen?</h1><!-- Bestaat niet -->
     <h2>Email: Bakker-Ei@isgeweldig.com</h2>
     <h2></h2>
     <h2>Telefoonnummer: +30 225537-34</h2> 
