ortger zei fix dus wij doen fix
Co-authored-by: Yannis Raijmakers (Leerling) <211757@LL-sgweredi.nl>

--- a/BakkerEi/Home.html
+++ b/BakkerEi/Home.html
@@ -8,13 +8,13 @@
     <link rel="stylesheet" href="style.css">
     <script src="script.js" defer></script>
     <link rel="icon" href="./reschouscres/logo.png" type="image/x-icon">
-</head>
+</head> 
 <body>
     <header>
         <a href="Home.html"><img src="reschouscres/logo.png" class="logo" width="150px"></a>
-        <a href="Producten.html" id="producten"><div class="knop"><h2>Producten</h2></div></a>
-        <a href="Verhaal.html" id="verhaal"><div class="knop" id="verhaal"> <h2>Over ons</h2> </div></a>
-        <a href="Contact.html" id="contact"><div class="knop" id="contact"> <h2>Contact</h2> </div></a>
+        <a href="Producten.html" class="knop_href" id="producten"><div class="knop"><h2>Producten</h2></div></a>
+        <a href="Verhaal.html" class="knop_href" id="verhaal"><div class="knop" id="verhaal"> <h2>Over ons</h2> </div></a>
+        <a href="Contact.html" class="knop_href" id="contact"><div class="knop" id="contact"> <h2>Contact</h2> </div></a>
     </header>
 
     <main>
@@ -47,8 +47,8 @@
         </tm>
         <nav id="navbar">
             <div class="knop_f">Email</div>
-            <div class="knop_f"><a id="contact_f" href="Contact.html">Contact</a></div>
-            <div class="knop_f"><a id="link_youtube" href="https://www.youtube.com/@bakker-ei-lf8xy">Youtube</a></div>
+            <div><a class="knop_f" href="Contact.html">Contact</a></div>
+            <div><a class="knop_f" href="https://www.youtube.com/@bakker-ei-lf8xy">Youtube</a></div>
         </nav>
     </footer>
 </body>
