--- a/BakkerEi/Verhaal.html
+++ b/BakkerEi/Verhaal.html
@@ -9,39 +9,37 @@
     <link rel="icon" href="./reschouscres/logo.png" type="image/x-icon">
 </head>
 
-<header>
-    <a href="Home.html"><img src="reschouscres/logo.png" class="logo" width="150px"></a>
-    <a href="Producten.html" id="producten"><div class="knop"><h2>Producten</h2></div></a>
-    <a href="Verhaal.html" id="verhaal"><div class="knop" id="verhaal"> <h2>Over ons</h2> </div></a>
-    <a href="Contact.html" id="contact"><div class="knop" id="contact"> <h2>Contact</h2> </div></a>
-</header>
 <body>
-    <ons_team>
-        <titeltekst><h1>Wie zijn wij?</h1>
-        <h2>Wij zijn een bakkerij die gestart is door 4 leerlingen uit het Were-di, als een schoolproject voor economie. Ons idee was om voor dat project een eigen bedrijf te starten. Na veel brainstormen zijn we op het idee gekomen om een bakkerij te maken die Griekse producten verkoopt. (aangezien een van de stichters Grieks is). Na dit schoolproject was het idee van Bakker-Ei eigenlijk geïndigd, maar toen er in 2023 een spullen mocht verkopen, hebben wij het bedrijf teruggebracht, en nu verkopen we jaarlijks bij de Were-di Kerstmarkt.</h2></titeltekst>
-        <!-- afbeelding komt nog, gebruikt melomakarona omdat daar code al voor is --><melomakarona><img src="reschouscres/Melomakarona.png"g alt="Melomakarona" class="product_afbeelding"></melomakarona>
-        </ons_team>
-        <ons_merk>
-            <!-- afbeelding komt nog, gebruikt melomakarona omdat daar code al voor is --><wij><img src="reschouscres/Tsoureki.webp"g alt="Melomakarona" class="product_afbeelding"></wij>
-            <titeltekst><h1>Ons merk</h1>
-            <h2>Het logo en de kleuren die bij Bakker-Ei gebruikt worden zit een verhaal achter. de kleuren zijn gekozen door een foto van Tsoureki te maken, en daar de kleuren van te pakken. De buitenkant van de tsoureki werdt onze hoofdkleur en de binnen kant gebruiken we als accentkleur (Zoals te zien in het logo) De naam is eigenlijk vrij simpel, Yannis had bakkerij fout geschreven om Selton boos te maken, en later besloten we om dit als onze naam te gebruiken, en daarom ook 2 eieren in het logo.</h2></titeltekst>
-        </ons_merk>
-    <script>
-    </script>
+    <header>
+        <a href="Home.html"><img src="reschouscres/logo.png" class="logo" width="150px"></a>
+        <a href="Producten.html" class="knop_href" id="producten"><div class="knop"><h2>Producten</h2></div></a>
+        <a href="Verhaal.html" class="knop_href" id="verhaal"><div class="knop" id="verhaal"> <h2>Over ons</h2> </div></a>
+        <a href="Contact.html" class="knop_href" id="contact"><div class="knop" id="contact"> <h2>Contact</h2> </div></a>
+    </header>
+        <div class="ons_team">
+            <div class="titeltekst"><h1>Wie zijn wij?</h1></div>
+            <h2>Wij zijn een bakkerij die gestart is door 4 leerlingen uit het Were-di, als een schoolproject voor economie. Ons idee was om voor dat project een eigen bedrijf te starten. Na veel brainstormen zijn we op het idee gekomen om een bakkerij te maken die Griekse producten verkoopt. (aangezien een van de stichters Grieks is). Na dit schoolproject was het idee van Bakker-Ei eigenlijk geïndigd, maar toen er in 2023 een spullen mocht verkopen, hebben wij het bedrijf teruggebracht, en nu verkopen we jaarlijks bij de Were-di Kerstmarkt.</h2></titeltekst>
+            <!-- afbeelding komt nog, gebruikt melomakarona omdat daar code al voor is --><div class="melomakarona"><img src="reschouscres/Melomakarona.png"g alt="Melomakarona" class="product_afbeelding"></div>
+            </div>
+            <div class="ons_merk">
+                <!-- afbeelding komt nog, gebruikt melomakarona omdat daar code al voor is --><div class="wij"><img src="reschouscres/Tsoureki.webp"g alt="Melomakarona" class="product_afbeelding"></div>
+                <div class="titeltekst"><h1>Ons merk</h1></div>
+                <h2>Het logo en de kleuren die bij Bakker-Ei gebruikt worden zit een verhaal achter. de kleuren zijn gekozen door een foto van Tsoureki te maken, en daar de kleuren van te pakken. De buitenkant van de tsoureki werdt onze hoofdkleur en de binnen kant gebruiken we als accentkleur (Zoals te zien in het logo) De naam is eigenlijk vrij simpel, Yannis had bakkerij fout geschreven om Selton boos te maken, en later besloten we om dit als onze naam te gebruiken, en daarom ook 2 eieren in het logo.</h2></titeltekst>
+            </div>
+        <script>
+        </script>
+
+    <footer>
+        <tm id="trademark">
+            <img src="reschouscres/logo.png" class="logo" width="40px">
+            <div>© 2024 Bakker-Ei, Inc.</div>
+        </tm>
+        <nav id="navbar">
+            <div class="knop_f">Email</div>
+            <div><a class="knop_f" href="Contact.html">Contact</a></div>
+            <div><a class="knop_f" href="https://www.youtube.com/@bakker-ei-lf8xy">Youtube</a></div>
+        </nav>
+    </footer>
 </body>
-
-
-<footer>
-    <tm id="trademark">
-        <img src="reschouscres/logo.png" class="logo" width="40px">
-        <div>© 2024 Bakker-Ei, Inc.</div>
-    </tm>
-    <nav id="navbar">
-        <div class="knop_f">Email</div>
-        <div class="knop_f"><a id="contact_f" href="Contact.html">Contact</a></div>
-        <div class="knop_f"><a id="link_youtube" href="https://www.youtube.com/@bakker-ei-lf8xy">Youtube</a></div>
-    </nav>
-</footer>
-
 </html>
 
