--- a/BakkerEi/Contact.html
+++ b/BakkerEi/Contact.html
@@ -33,8 +33,8 @@
     </tm>
     <nav id="navbar">
         <div class="knop_f">Email</div>
-        <div class="knop_f"><a id="contact_f" href="Contact.html">Contact</a></div>
-        <div class="knop_f"><a id="link_youtube" href="https://www.youtube.com/@bakker-ei-lf8xy">Youtube</a></div>
+        <div><a class="knop_f" href="Contact.html">Contact</a></div>
+        <div><a class="knop_f" href="https://www.youtube.com/@bakker-ei-lf8xy">Youtube</a></div>
     </nav>
 </footer>
 </body>
