nu werkt het IG

--- a/BakkerEi/Contact.html
+++ b/BakkerEi/Contact.html
@@ -6,37 +6,35 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bakker-Ei!</title>
     <link rel="stylesheet" href="style.css">
-    <script src="script.js" defer></script>
     <link rel="icon" href="./reschouscres/logo.png" type="image/x-icon">
 </head>
 <body>
-<header>
-    <a href="Home.html"><img src="reschouscres/logo.png" class="logo" width="150px"></a>
-    <a href="Producten.html" id="producten"><div class="knop"><h2>Producten</h2></div></a>
-    <a href="Verhaal.html" id="verhaal"><div class="knop" id="verhaal"> <h2>Over ons</h2> </div></a>
-    <a href="Contact.html" id="contact"><div class="knop" id="contact"> <h2>Contact</h2> </div></a>
-</header>
+    <header>
+        <a href="Home.html"><img src="reschouscres/logo.png" class="logo" width="150px"></a>
+        <a href="Producten.html" class="knop_href" id="producten"><div class="knop"><h2>Producten</h2></div></a>
+        <a href="Verhaal.html" class="knop_href" id="verhaal"><div class="knop" id="verhaal"> <h2>Over ons</h2> </div></a>
+        <a href="Contact.html" class="knop_href" id="contact"><div class="knop" id="contact"> <h2>Contact</h2> </div></a>
+    </header>
+        <div class="contact">
+        <h1>Wilt U contact opnemen?</h1><!-- Bestaat niet -->
+        <h2>Email: Bakker-Ei@isgeweldig.com</h2>
+        <h2></h2>
+        <h2>Telefoonnummer: +30 225537-34</h2> 
+        </div>
+        <script>
+        </script>
 
-    <contact>
-    <h1>Wilt u contact opnemen?</h1><!-- Bestaat niet -->
-    <h2>Email: Bakker-Ei@isgeweldig.com</h2>
-    <h2></h2>
-    <h2>Telefoonnummer: +30 225537-34</h2> 
-    </contact>
-
-
-
-<footer>
-    <tm id="trademark">
-        <img src="reschouscres/logo.png" class="logo" width="40px">
-        <div>© 2024 Bakker-Ei, Inc.</div>
-    </tm>
-    <nav id="navbar">
-        <div class="knop_f">Email</div>
-        <div><a class="knop_f" href="Contact.html">Contact</a></div>
-        <div><a class="knop_f" href="https://www.youtube.com/@bakker-ei-lf8xy">Youtube</a></div>
-    </nav>
-</footer>
+    <footer>
+        <tm id="trademark">
+            <img src="reschouscres/logo.png" class="logo" width="40px">
+            <div>© 2024 Bakker-Ei, Inc.</div>
+        </tm>
+        <nav id="navbar">
+            <div class="knop_f">Email</div>
+            <div><a class="knop_f" href="Contact.html">Contact</a></div>
+            <div><a class="knop_f" href="https://www.youtube.com/@bakker-ei-lf8xy">Youtube</a></div>
+        </nav>
+    </footer>
 </body>
 </html>
 
