--- a/BakkerEi/Home.html
+++ b/BakkerEi/Home.html
@@ -41,15 +41,15 @@
     </main>
 
     <footer>
-        <tm id="trademark">
+        <div id="trademark">
             <img src="reschouscres/logo.png" class="logo" width="40px">
             <div>© 2024 Bakker-Ei, Inc.</div>
-        </tm>
-        <nav id="navbar">
+        </div>
+        <div id="navbar">
             <div class="knop_f">Email</div>
             <div><a class="knop_f" href="Contact.html">Contact</a></div>
             <div><a class="knop_f" href="https://www.youtube.com/@bakker-ei-lf8xy">Youtube</a></div>
-        </nav>
+        </div>
     </footer>
 </body>
 </html>
