--- a/BakkerEi/Verhaal.html
+++ b/BakkerEi/Verhaal.html
@@ -7,13 +7,26 @@
     <title>Bakker-Ei!</title>
     <link rel="stylesheet" href="style.css">
     <link rel="icon" href="./reschouscres/logo.png" type="image/x-icon">
+    <script src="script.js"></script>
 </head>
 <body>
     <header>
         <a href="Home.html"><img src="reschouscres/logo.png" class="logo" width="150px"></a>
-        <a href="Producten.html" class="knop_href" id="producten"><div class="knop"><h2>Producten</h2></div></a>
+        <a href="Producten.html" class="knop_href" id="producten_header"><div class="knop"><h2>Producten</h2></div></a>
         <a href="Verhaal.html" class="knop_href" id="verhaal"><div class="knop" id="verhaal"> <h2>Over ons</h2> </div></a>
         <a href="Contact.html" class="knop_href" id="contact"><div class="knop" id="contact"> <h2>Contact</h2> </div></a>
+        <div class="hamburger-menu">
+            <div class="hamburger-icon">
+                <span></span>
+                <span></span>
+                <span></span>
+            </div>
+            <nav class="menu-items">
+                <a href="Producten.html"><h2>Producten</h2></a>
+                <a href="Verhaal.html"><h2>Over Ons</h2></a>
+                <a href="Contact.html"><h2>Contact</h2></a>
+            </nav>
+        </div>
     </header>
 
     <main>
