kleine foutjes gefixt, grote fouten blijven nog

--- a/BakkerEi/Producten.html
+++ b/BakkerEi/Producten.html
@@ -22,9 +22,9 @@
                 <span></span>
             </div>
             <nav class="menu-items">
-                <a href="Producten.html"><h2>Producten</h2></a>
-                <a href="Verhaal.html"><h2>Over Ons</h2></a>
-                <a href="Contact.html"><h2>Contact</h2></a>
+                <a href="Producten.html"><p>Producten</p></a>
+                <a href="Verhaal.html"><p>Over Ons</p></a>
+                <a href="Contact.html"><p>Contact</p></a>
             </nav>
         </div>
     </header>
