--- a/BakkerEi/Producten.html
+++ b/BakkerEi/Producten.html
@@ -7,8 +7,8 @@
     <title>Bakker-Ei!</title>
     <link rel="stylesheet" href="style.css">
     <link rel="icon" href="./reschouscres/logo.png" type="image/x-icon">
-    <script src="script.js"></script>
 </head>
+<script src="hamburger.js"></script>
 <body>
     <header>
         <a href="Home.html"><img src="reschouscres/logo.png" class="logo" width="150px"></a>
