--- a/BakkerEi/Verhaal.html
+++ b/BakkerEi/Verhaal.html
@@ -7,7 +7,7 @@
     <title>Bakker-Ei!</title>
     <link rel="stylesheet" href="style.css">
     <link rel="icon" href="./reschouscres/logo.png" type="image/x-icon">
-    <script src="script.js"></script>
+    <script src="hamburger.js"></script>
 </head>
 <body>
     <header>
