Website stuk meer responsive gemaakt, kleine problemen bij producten

--- a/BakkerEi/Producten.html
+++ b/BakkerEi/Producten.html
@@ -43,7 +43,7 @@
 
     <footer>
         <div id="trademark">
-            <img src="reschouscres/logo.png" class="logo" width="40px">
+            <img src="reschouscres/logo.png" class="logo_f" width="40px">
             <div>© 2024 Bakker-Ei, Inc.</div>
         </div>
         <div id="navbar">
