--- a/BakkerEi/Contact.html
+++ b/BakkerEi/Contact.html
@@ -39,7 +39,7 @@
 
     <footer>
         <tm id="trademark">
-            <img src="reschouscres/logo.png" class="logo" width="40px">
+            <img src="reschouscres/logo.png" class="logo_f" width="40px">
             <div>© 2024 Bakker-Ei, Inc.</div>
         </tm>
         <nav id="navbar">
