kleine aanpassin naar e-mail knop. stuurt nu een email naar billie's email

--- a/BakkerEi/Verhaal.html
+++ b/BakkerEi/Verhaal.html
@@ -47,7 +47,7 @@
             <div>© 2024 Bakker-Ei, Inc.</div>
         </div>
         <nav id="navbar">
-            <div class="knop_f">Email</div>
+            <div><a class="knop_f" href="mailto:Vye.brator911@gmail.com" >Email</a></div>
             <div><a class="knop_f" href="Contact.html">Contact</a></div>
             <div><a class="knop_f" href="https://www.youtube.com/@bakker-ei-lf8xy">Youtube</a></div>
         </nav>
