naam aangepast home

--- a/BakkerEi/Producten.html
+++ b/BakkerEi/Producten.html
@@ -11,7 +11,7 @@
 <script src="hamburger.js"></script>
 <body>
     <header>
-        <a href="Home.html"><img src="reschouscres/logo.png" class="logo" width="150px"></a>
+        <a href="Index.html"><img src="reschouscres/logo.png" class="logo" width="150px"></a>
         <a href="Producten.html" class="knop_href" id="producten_header"><div class="knop"><h2>Producten</h2></div></a>
         <a href="Verhaal.html" class="knop_href" id="verhaal"><div class="knop" id="verhaal"> <h2>Over ons</h2> </div></a>
         <a href="Contact.html" class="knop_href" id="contact"><div class="knop" id="contact"> <h2>Contact</h2> </div></a>
