--- a/BakkerEi/Producten.html
+++ b/BakkerEi/Producten.html
@@ -9,7 +9,7 @@
     <link rel="icon" href="./reschouscres/logo.png" type="image/x-icon">
 </head>
 <script src="hamburger.js"></script>
-<body>
+<body class="Producten_Body">
     <header>
         <a href="Index.html"><img src="reschouscres/logo.png" class="logo" width="150px"></a>
         <a href="Producten.html" class="knop_href" id="producten_header"><div class="knop"><h2>Producten</h2></div></a>
