--- a/BakkerEi/Index.html
+++ b/BakkerEi/Index.html
@@ -39,15 +39,11 @@
                 </div>
                 <!-- Pijl naar links -->
                 <button class="vorige">
-                  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24">
-                    <path d="M15.41 16.59L10.83 12l4.58-4.59L14 6l-6 6 6 6z"/>
-                  </svg>
+                  <img src="reschouscres/pijltjebakkerv2.png" alt="Volgende" width="100" height="100">
                 </button>
                 <!-- Pijl naar rechts -->
                 <button class="volgende">
-                  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24">
-                    <path d="M9 6l6 6-6 6L10.41 16.59 15 12 10.41 7.41z"/>
-                  </svg>
+                  <img src="reschouscres/pijltjebakkerv2.png" alt="Volgende" width="100" height="100">
                 </button>
               </div>
     </main>
