--- a/BakkerEi/Producten.html
+++ b/BakkerEi/Producten.html
@@ -31,26 +31,33 @@
 
     <main>
         <div class="producten">
-            <div class="titeltekst">
-                <h1>Melomakarona - Griekse Kerstkoekjes</h1>
-                <h2>Heerlijk geurende koekjes met een zachte textuur, gemaakt van olijfolie, sinaasappel en warme specerijen. Na het bakken royaal ondergedompeld in een honing-siroop en afgewerkt met een topping van fijngemalen walnoten. Perfect als zoete verwennerij bij de feestdagen of gewoon bij een kop koffie.</h2>
+            <div class="container">
+                <div class="titeltekst">
+                    <h1>Melomakarona - Griekse Kerstkoekjes</h1>
+                    <h2>Heerlijk geurende koekjes met een zachte textuur, gemaakt van olijfolie, sinaasappel en warme specerijen. Na het bakken royaal ondergedompeld in een honing-siroop en afgewerkt met een topping van fijngemalen walnoten. Perfect als zoete verwennerij bij de feestdagen of gewoon bij een kop koffie.</h2>
+                </div>
+                <div class="melomakarona">
+                    <img src="reschouscres/Melomakarona.png" alt="Melomakarona" class="product_afbeelding">
+                </div>
             </div>
-            <div class="melomakarona">
-                <img src="reschouscres/Melomakarona.png" alt="Melomakarona" class="product_afbeelding">
+            <div id="Tsoureki" class="container">
+                <div class="melomakarona">
+                    <img src="reschouscres/Tsoureki.webp" alt="Melomakarona" class="product_afbeelding">
+                </div>
+                <div class="titeltekst">
+                    <h1>Tsoureki - Grieks Paasbrood</h1>
+                    <h2>Tsoureki is een zacht, lichtzoet brood dat traditioneel wordt gebakken tijdens feestdagen zoals Pasen, maar het smaakt het hele jaar door heerlijk. Dit gevlochten brood heeft een subtiele smaak van sinaasappel en wordt gemaakt met speciale kruiden die het een unieke geur en smaak geven. De goudbruine korst is soms afgewerkt met amandelschaafsel, wat zorgt voor een extra goede bite (die ook lekker fris is). Tsoureki is perfect bij het ontbijt, als tussendoortje met wat boter of jam, of gewoon bij een kop koffie of thee. Een brood om te delen en van te genieten!</h2>
+                </div>
+
             </div>
-            <div class="titeltekst">
-                <h1>Tsoureki - Grieks Paasbrood</h1>
-                <h2>Tsoureki is een zacht, lichtzoet brood dat traditioneel wordt gebakken tijdens feestdagen zoals Pasen, maar het smaakt het hele jaar door heerlijk. Dit gevlochten brood heeft een subtiele smaak van sinaasappel en wordt gemaakt met speciale kruiden die het een unieke geur en smaak geven. De goudbruine korst is soms afgewerkt met amandelschaafsel, wat zorgt voor een extra goede bite (die ook lekker fris is). Tsoureki is perfect bij het ontbijt, als tussendoortje met wat boter of jam, of gewoon bij een kop koffie of thee. Een brood om te delen en van te genieten!</h2>
-            </div>
-            <div class="melomakarona">
-                <img src="reschouscres/Tsoureki.webp" alt="Melomakarona" class="product_afbeelding">
-            </div>
-            <div class="titeltekst">
-                <h1>Kourabiedes - Griekse Kerstkoeken</h1>
-                <h2>Kourabiedes zijn klassieke Griekse koekjes, perfect voor feestelijke momenten. Deze zachte, boterige koekjes worden gemaakt met een rijke hoeveelheid roomboter en een vleugje amandel, wat ze een heerlijke smaak en textuur geeft. Na het bakken worden ze royaal bestrooid met poedersuiker, wat zorgt voor een zoete en zachte afwerking. Het resultaat is een heerlijk smeltend koekje dat elke gelegenheid extra speciaal maakt. Ideaal bij een kop koffie of als zoete traktatie bij de feestdagen.</h2>
-            </div>
-            <div class="melomakarona">
-                <img src="reschouscres/Kourabiedes.jpg" alt="Melomakarona" class="product_afbeelding">
+            <div id="Kourabiedes" class="container">
+                <div class="titeltekst">
+                    <h1>Kourabiedes - Griekse Kerstkoeken</h1>
+                    <h2>Kourabiedes zijn klassieke Griekse koekjes, perfect voor feestelijke momenten. Deze zachte, boterige koekjes worden gemaakt met een rijke hoeveelheid roomboter en een vleugje amandel, wat ze een heerlijke smaak en textuur geeft. Na het bakken worden ze royaal bestrooid met poedersuiker, wat zorgt voor een zoete en zachte afwerking. Het resultaat is een heerlijk smeltend koekje dat elke gelegenheid extra speciaal maakt. Ideaal bij een kop koffie of als zoete traktatie bij de feestdagen.</h2>
+                </div>
+                <div class="melomakarona">
+                    <img src="reschouscres/Kourabiedes.jpg" alt="Melomakarona" class="product_afbeelding">
+                </div>
             </div>
         </div>
     </main>
@@ -60,11 +67,11 @@
             <img src="reschouscres/logo.png" class="logo_f" width="40px">
             <div>© 2024 Bakker-Ei, Inc.</div>
         </div>
-        <div id="navbar">
+        <nav id="navbar">
             <div><a class="knop_f" href="mailto:Zoetzuuresaus@gmail.com" >Email</a></div>
             <div><a class="knop_f" href="Contact.html">Contact</a></div>
             <div><a class="knop_f" href="https://www.youtube.com/@bakker-ei-lf8xy">Youtube</a></div>
-        </div>
+        </nav>
     </footer>
 </body>
 </html>
