--- a/BakkerEi/Verhaal.html
+++ b/BakkerEi/Verhaal.html
@@ -30,15 +30,15 @@
     </header>
 
     <main>
-        <section id="ons_team">
+        <div id="ons_team">
             <div class="titeltekst"><h1>Wie zijn wij?</h1></div>
-            <h2>Wij zijn een bakkerij die gestart is door 4 leerlingen uit het Were-di, als een schoolproject voor economie. Ons idee was om voor dat project een eigen bedrijf te starten. Na veel brainstormen zijn we op het idee gekomen om een bakkerij te maken die Griekse producten verkoopt. (aangezien een van de stichters Grieks is). Na dit schoolproject was het idee van Bakker-Ei eigenlijk geïndigd, maar toen er in 2023 een spullen mocht verkopen, hebben wij het bedrijf teruggebracht, en nu verkopen we jaarlijks bij de Were-di Kerstmarkt.</h2>
-        </section>
+            <h2>Wij zijn een bakkerij die gestart is door 4 leerlingen uit het Were-di, als een schoolproject voor economie. Ons idee was om voor dat project een eigen bedrijf te starten. Na veel brainstormen zijn we op het idee gekomen om een bakkerij te maken die Griekse producten verkoopt. (aangezien een van de stichters Grieks is). Na dit schoolproject was het idee van Bakker-Ei eigenlijk geïndigd, maar toen we in 2023 spullen mocht verkopen, hebben wij het bedrijf teruggebracht, en nu verkopen we jaarlijks bij de Were-di Kerstmarkt.</h2>
+        </div>
         
-        <section id="ons_merk">
+        <div id="ons_merk">
             <div class="titeltekst"><h1>Ons merk</h1></div>
             <h2>Het logo en de kleuren die bij Bakker-Ei gebruikt worden zit een verhaal achter. de kleuren zijn gekozen door een foto van Tsoureki te maken, en daar de kleuren van te pakken. De buitenkant van de tsoureki werdt onze hoofdkleur en de binnen kant gebruiken we als accentkleur (Zoals te zien in het logo) De naam is eigenlijk vrij simpel, Yannis had bakkerij fout geschreven om Selton boos te maken, en later besloten we om dit als onze naam te gebruiken, en daarom ook 2 eieren in het logo.</h2>
-        </section>
+        </div>
     </main>
 
     <footer>
