--- a/BakkerEi/Contact.html
+++ b/BakkerEi/Contact.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="nl">
 <head>
-    <link rel="stylesheet" href="https://use.typekit.net/ugf7egy.css">
+    <link rel="stylesheet" href="https://use.typekit.net/rer3xgb.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bakker-Ei!</title>
