geen flauw idee wat ik heb gedaan m

--- a/BakkerEi/Producten.html
+++ b/BakkerEi/Producten.html
@@ -41,14 +41,13 @@
                 </div>
             </div>
             <div id="Tsoureki" class="container">
-                <div class="melomakarona">
+                <div class="Tsoureki_a">
                     <img src="reschouscres/Tsoureki.webp" alt="Melomakarona" class="product_afbeelding">
                 </div>
                 <div class="titeltekst_Tsoureki">
                     <h1>Tsoureki - Grieks Paasbrood</h1>
                     <h2>Tsoureki is een zacht, lichtzoet brood dat traditioneel wordt gebakken tijdens feestdagen zoals Pasen, maar het smaakt het hele jaar door heerlijk. Dit gevlochten brood heeft een subtiele smaak van sinaasappel en wordt gemaakt met speciale kruiden die het een unieke geur en smaak geven. De goudbruine korst is soms afgewerkt met amandelschaafsel, wat zorgt voor een extra goede bite (die ook lekker fris is). Tsoureki is perfect bij het ontbijt, als tussendoortje met wat boter of jam, of gewoon bij een kop koffie of thee. Een brood om te delen en van te genieten!</h2>
                 </div>
-
             </div>
             <div id="Kourabiedes" class="container">
                 <div class="titeltekst">
