Begin aan homepage v2

--- a/BakkerEi/Index.html
+++ b/BakkerEi/Index.html
@@ -46,6 +46,20 @@
                 <img src="reschouscres/pijltjebakkerv2.png" alt="Volgende" width="100" height="100">
               </button>
             </div>
+        <div class="mini_producten">
+          <div class="mini_producten">
+              <img src="reschouscres/Melomakarona.png" alt="mini_melomakarona" width="200px">
+              <h2>Melomakarona</h2>
+          </div>
+          <div class="mini_producten">
+              <img src="reschouscres/Tsoureki.webp" alt="mini_tsoureki" width="200px">
+              <h2>Melomakarona</h2>
+          </div>
+          <div class="mini_producten">
+              <img src="reschouscres/Kourabiedes.jpg" alt="Kourabiedes" width="200px">
+              <h2>Kourabiedes</h2>
+          </div>
+        </div>
         </main>
 
   <footer>
