--- a/BakkerEi/Index.html
+++ b/BakkerEi/Index.html
@@ -60,6 +60,10 @@
               <h2>Kourabiedes</h2>
           </div>
         </div>
+        <div class="reviews">
+          
+          <h1></h1>
+          </div>
         </main>
 
   <footer>
