--- a/BakkerEi/Index.html
+++ b/BakkerEi/Index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="nl">
 <head>
-  <link rel="stylesheet" href="https://use.typekit.net/rer3xgb.css">
+    <link rel="stylesheet" href="https://use.typekit.net/ugf7egy.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bakker-Ei!</title>
@@ -25,57 +25,53 @@
           <a href="Producten.html"><p>Producten</p></a>
           <a href="Verhaal.html"><p>Over Ons</p></a>
           <a href="Contact.html"><p>Contact</p></a>
-      </nav>
+        </nav>
     </div>
   </header>
+    <main>
+        <div class="carousel">
+            <div class="carousel">
+                <div class="carousel-images">
+                  <img src="reschouscres/Carousel 1.jpg" alt="Afbeelding 1">
+                  <img src="reschouscres/Carousel 2.png" alt="Afbeelding 2">
+                  <img src="reschouscres/Carousel 3.jpg" alt="Afbeelding 3">
+                </div>
+                <!-- Pijl naar links -->
+                <button class="vorige">
+                  <img src="reschouscres/pijltjebakkerv2.png" alt="Volgende" width="100" height="100">
+                </button>
+                <!-- Pijl naar rechts -->
+                <button class="volgende">
+                  <img src="reschouscres/pijltjebakkerv2.png" alt="Volgende" width="100" height="100">
+                </button>
+                  </div>
+              <!-- Producten Sectie -->
+              <div class="mini_producten_container">
+                  <div class="mini_producten">
+                      <img src="reschouscres/Melomakarona.png" alt="mini_melomakarona" width="200px">
+                      <h2>Melomakarona</h2>
+                  </div>
+                  <div class="mini_producten">
+                      <img src="reschouscres/Tsoureki.webp" alt="mini_tsoureki" width="200px">
+                      <h2>Tsoureki</h2>
+                  </div>
+                  <div class="mini_producten">
+                      <img src="reschouscres/Kourabiedes.jpg" alt="Kourabiedes" width="200px">
+                      <h2>Kourabiedes</h2>
+                  </div>
+                </div>
+    </main>
 
-  <main>
-      <div class="carousel">
-          <div class="carousel">
-              <div class="carousel-images">
-                <img src="reschouscres/Carousel 1.jpg" alt="Afbeelding 1">
-                <img src="reschouscres/Carousel 2.png" alt="Afbeelding 2">
-                <img src="reschouscres/Carousel 3.jpg" alt="Afbeelding 3">
-              </div>
-              <!-- Pijl naar links -->
-              <button class="vorige">
-                <img src="reschouscres/pijltjebakkerv2.png" alt="Volgende" width="100" height="100">
-              </button>
-              <!-- Pijl naar rechts -->
-              <button class="volgende">
-                <img src="reschouscres/pijltjebakkerv2.png" alt="Volgende" width="100" height="100">
-              </button>
-            </div>
-        <div class="mini_producten">
-          <div class="mini_producten">
-              <img src="reschouscres/Melomakarona.png" alt="mini_melomakarona" width="200px">
-              <h2>Melomakarona</h2>
-          </div>
-          <div class="mini_producten">
-              <img src="reschouscres/Tsoureki.webp" alt="mini_tsoureki" width="200px">
-              <h2>Melomakarona</h2>
-          </div>
-          <div class="mini_producten">
-              <img src="reschouscres/Kourabiedes.jpg" alt="Kourabiedes" width="200px">
-              <h2>Kourabiedes</h2>
-          </div>
+    <footer>
+        <div id="trademark">
+            <img src="reschouscres/logo.png" class="logo_f" width="40px">
+            <div>© 2024 Bakker-Ei, Inc.</div>
         </div>
-        <div class="reviews">
-          
-          <h1></h1>
-          </div>
-        </main>
-
-  <footer>
-      <div id="trademark">
-          <img src="reschouscres/logo.png" class="logo_f" width="40px">
-          <div>© 2024 Bakker-Ei, Inc.</div>
-      </div>
-      <div id="navbar">
-        <div><a class="knop_f" href="mailto:Zoetzuuresaus@gmail.com" >Email</a></div>
-          <div><a class="knop_f" href="Contact.html">Contact</a></div>
-          <div><a class="knop_f" href="https://www.youtube.com/@bakker-ei-lf8xy">Youtube</a></div>
-      </div>
-  </footer>
+        <div id="navbar">
+          <div><a class="knop_f" href="mailto:Zoetzuuresaus@gmail.com" >Email</a></div>
+            <div><a class="knop_f" href="Contact.html">Contact</a></div>
+            <div><a class="knop_f" href="https://www.youtube.com/@bakker-ei-lf8xy">Youtube</a></div>
+        </div>
+    </footer>
 </body>
 </html>
