--- a/BakkerEi/Index.html
+++ b/BakkerEi/Index.html
@@ -46,18 +46,45 @@
                 </button>
                   </div>
               <!-- Producten Sectie -->
+              <div class="titeltext_centered">
+                <h1>Wat verkopen wij?</h1>
+              </div>
               <div class="mini_producten_container">
                   <div class="mini_producten">
-                      <img src="reschouscres/Melomakarona.png" alt="mini_melomakarona" width="200px">
+                      <img src="reschouscres/Melomakarona.png" alt="mini_melomakarona" width="400px">
                       <h2>Melomakarona</h2>
                   </div>
                   <div class="mini_producten">
-                      <img src="reschouscres/Tsoureki.webp" alt="mini_tsoureki" width="200px">
+                      <img src="reschouscres/Tsoureki.png" alt="mini_tsoureki" width="400px">
                       <h2>Tsoureki</h2>
                   </div>
                   <div class="mini_producten">
-                      <img src="reschouscres/Kourabiedes.jpg" alt="Kourabiedes" width="200px">
+                      <img src="reschouscres/Kourabiedes.jpg" alt="Kourabiedes" width="400px">
                       <h2>Kourabiedes</h2>
+                  </div>
+                </div>
+                <!--Reviews-->
+                <div class="titeltext_centered">
+                  <h1>Wat vinden de klanten?</h1>
+                </div>
+                <div class="reviews">
+                  <div class="review">
+                    <img src="reschouscres/Review IcoonV2.png" alt="Review Icoon" width="200px">
+                    <img src="reschouscres/5 sterren review.png" alt="5 sterren" width="200px">
+                    <h2>Bakker-ei is beter dan gedacht!</h2>
+                    <p>Bij Bakker-Ei overtreffen ze alle verwachtingen. De producten zijn voortreffelijk, de sfeer is warm en gastvrij, en de service is ongeëvenaard, de winkel die niet bestaat is zelfs geweldig. Absoluut een aanrader voor liefhebbers van kwaliteit en vakmanschap.</p>
+                  </div>
+                  <div class="review">
+                    <img src="reschouscres/Review IcoonV2.png" alt="Review Icoon" width="200px">
+                    <img src="reschouscres/3 sterren review.png" alt="3 Sterren" width="200px">
+                    <h2>Ik voel me opgelicht, verder top.</h2>
+                    <p>Bakker-ei had goed brood, maar ik voel me opgelicht. Ik verwachtte eieren, maar die kreeg ik niet. Ook is het brood te lekker, ik wil het niet eten omdat ik anders niks meer lust.</p>
+                  </div>
+                  <div class="review">
+                    <img src="reschouscres/Review IcoonV2.png" alt="Review Icon" width="200px">
+                    <img src="reschouscres/4 sterren review.png" alt="4 Sterren" width="200px">
+                    <h2>Echt am-ei-zing!</h2>
+                    <p>Bij Bakker-Ei krijg je echt eieren voor je geld! Alles is hier ei-genlijk perfect: van ei-genzinnige tsoureki tot melomakarona waar je van smult. De service is ei-genaardig goed, en de sfeer is ei-ndeloos gezellig. Een broodeerlijke aanrader, ze maken echt geen ei van hun werk!</p>
                   </div>
                 </div>
     </main>
